# ftd2xx

./: .isort.cfg  .pre-commit-config.yaml  setup.cfg  setup.py
ftd2xx/: __init__.py  _ftd2xx_darwin.py  _ftd2xx_linux.py  defines.py  ftd2xx.py
ftd2xx/tests/: t_ftd2xx.py
